--- a/blog/src/app/contact/contact.component.html
+++ b/blog/src/app/contact/contact.component.html
@@ -1,1 +1,37 @@
-<p>contact works!</p>
+<form [formGroup]="contactForm" (ngSubmit)="submitForm()">
+  <div class="form-row">
+    <div class="col-md-4 mb-3">
+      <label for="firstname">First name</label>
+      <input type="text" class="form-control" id="firstname" placeholder="First name" formControlName="firstname" required>
+    </div>
+    <div class="col-md-4 mb-3">
+      <label for="lastname">Last name</label>
+      <input type="text" class="form-control" id="lastname" placeholder="Last name" formControlName="lastname" required>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="col-md-4 mb-3">
+      <label for="city">City</label>
+      <input type="text" class="form-control" id="city" placeholder="City" formControlName="city" required>
+    </div>
+    <div class="col-md-4 mb-3">
+      <label for="validationDefault05">Zip</label>
+      <input type="number" class="form-control" id="validationDefault05" placeholder="Zip" formControlName="zipcode" required>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="col-md-6 mb-3">
+      <label for="email">Email</label>
+      <input type="email" class="form-control" id="email" placeholder="Email" formControlName="email" required>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="subscribe" formControlName="subscribe">
+      <label class="form-check-label" for="subscribe">
+        Subscribe to our daily newsletter
+      </label>
+    </div>
+  </div>
+  <button class="btn btn-primary" type="submit">Submit</button>
+</form>
